Basic BlockEntity (Tiles) sending. Now placing hardcoded Signs in flatland. Great. Full functionality of Signs next, and then inventory and Chest.

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Utils\MetadataShort.cs" />
     <Compile Include="Utils\MetadataSlot.cs" />
     <Compile Include="Utils\MetadataString.cs" />
+    <Compile Include="Utils\Nbt.cs" />
     <Compile Include="Utils\NbtBinaryReader.cs" />
     <Compile Include="Utils\NbtBinaryWriter.cs" />
     <Compile Include="Utils\NbtFormatException.cs" />
