fNbt and log4net included in packages

--- a/src/MiNET/packages/repositories.config
+++ b/src/MiNET/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="../MiNET.Service/packages.config" />
   <repository path="..\MiNET.Service\packages.config" />
   <repository path="..\MiNET.Test\packages.config" />
+  <repository path="..\MiNET\packages.config" />
 </repositories>
