Implemented log4net in server.

--- a/src/MiNET/MiNET.Service/MiNET.Service.csproj
+++ b/src/MiNET/MiNET.Service/MiNET.Service.csproj
@@ -39,6 +39,9 @@
     <StartupObject>MiNET.Service.MiNetService</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net">
+      <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
