--- a/src/MiNET/MiNET.Service/App.config
+++ b/src/MiNET/MiNET.Service/App.config
@@ -1,6 +1,48 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+	<configSections>
+		<!-- Level 1 -->
+		<section name="log4net"
+		  type="log4net.Config.Log4NetConfigurationSectionHandler, 
+            log4net"/>
+		<!-- Level 2 -->
+	</configSections>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+	</startup>
+
+	<log4net>
+		<appender name="Console" type="log4net.Appender.ConsoleAppender">
+			<layout type="log4net.Layout.PatternLayout">
+				<!-- Pattern to output the caller's file name and line number -->
+				<!--<conversionPattern value="%5level [%thread] (%file:%line) - %message%newline" />-->
+				<conversionPattern value="%5level [%class] - %message%newline" />
+			</layout>
+			<filter type="log4net.Filter.LevelRangeFilter">
+				<levelMin value="INFO" />
+				<levelMax value="FATAL" />
+			</filter>
+		</appender>
+
+		<appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
+			<file value="minetlog.log" />
+			<appendToFile value="true" />
+			<maximumFileSize value="100KB" />
+			<maxSizeRollBackups value="2" />
+
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%level %thread %logger - %message%newline" />
+			</layout>
+			<filter type="log4net.Filter.LevelRangeFilter">
+				<levelMin value="DEBUG" />
+				<levelMax value="FATAL" />
+			</filter>
+		</appender>
+
+		<root>
+			<appender-ref ref="Console" />
+			<appender-ref ref="RollingFile" />
+		</root>
+	</log4net>
+
 </configuration>
