--- a/src/MiNET/MiNET.Service/App.config
+++ b/src/MiNET/MiNET.Service/App.config
@@ -3,8 +3,7 @@
 	<configSections>
 		<!-- Level 1 -->
 		<section name="log4net"
-		  type="log4net.Config.Log4NetConfigurationSectionHandler, 
-            log4net"/>
+		  type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
 		<!-- Level 2 -->
 	</configSections>
 	<startup>
@@ -27,7 +26,7 @@
 		<appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
 			<file value="minetlog.log" />
 			<appendToFile value="true" />
-			<maximumFileSize value="100KB" />
+			<maximumFileSize value="10000KB" />
 			<maxSizeRollBackups value="2" />
 
 			<layout type="log4net.Layout.PatternLayout">
@@ -41,7 +40,7 @@
 
 		<root>
 			<appender-ref ref="Console" />
-			<appender-ref ref="RollingFile" />
+			<!--<appender-ref ref="RollingFile" />-->
 		</root>
 	</log4net>
 
