Entity implementation. PrimedTnt was the first entity we needed. Now, this sets the stage for more agressive development of entities, items and blocks that are a bit more interesting.

--- a/src/MiNET/MiNET.Service/App.config
+++ b/src/MiNET/MiNET.Service/App.config
@@ -11,6 +11,16 @@
 	</startup>
 
 	<log4net>
+		<appender name="DebuggerAppender" type="log4net.Appender.DebugAppender">
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%newline%file (%line): %level: %message%newline"/>
+			</layout>
+			<filter type="log4net.Filter.LevelRangeFilter">
+				<levelMin value="DEBUG" />
+				<levelMax value="DEBUG" />
+			</filter>
+		</appender>
+
 		<appender name="Console" type="log4net.Appender.ConsoleAppender">
 			<layout type="log4net.Layout.PatternLayout">
 				<!-- Pattern to output the caller's file name and line number -->
@@ -41,6 +51,7 @@
 		<root>
 			<appender-ref ref="Console" />
 			<!--<appender-ref ref="RollingFile" />-->
+			<appender-ref ref="DebuggerAppender" />
 		</root>
 	</log4net>
 
