--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Blocks\BrickStairs.cs" />
     <Compile Include="Blocks\CobbleStoneStairs.cs" />
     <Compile Include="Blocks\DarkOakWoodStairs.cs" />
+    <Compile Include="Blocks\Glass.cs" />
     <Compile Include="Blocks\JungleWoodStairs.cs" />
     <Compile Include="Blocks\NetherBrickStairs.cs" />
     <Compile Include="Blocks\OakWoodStairs.cs" />
