--- a/src/MiNET/TestPlugin/TestPlugin.csproj
+++ b/src/MiNET/TestPlugin/TestPlugin.csproj
@@ -39,7 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="TestPlugin.cs" />
     <Compile Include="CommandHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
