New API Attributes, You can now listen for ...
... sending and receiving packets.
Will be added to the API documentation as soon as we optimized it ;)

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -85,6 +85,8 @@
     <Compile Include="PermissionManager.cs" />
     <Compile Include="PluginSystem\AbstractPlugin.cs" />
     <Compile Include="PluginSystem\Attributes\CommandAttribute.cs" />
+    <Compile Include="PluginSystem\Attributes\HandlePacketAttribute.cs" />
+    <Compile Include="PluginSystem\Attributes\HandleSendPacketAttribute.cs" />
     <Compile Include="PluginSystem\Attributes\PluginAttribute.cs" />
     <Compile Include="PluginSystem\IMiNETPlugin.cs" />
     <Compile Include="Blocks\Block.cs" />
