--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -79,7 +79,7 @@
     <Compile Include="Entities\ItemEntity.cs" />
     <Compile Include="Entities\PrimedTnt.cs" />
     <Compile Include="Inventory.cs" />
-    <Compile Include="InventoryMngr.cs" />
+    <Compile Include="InventoryManager.cs" />
     <Compile Include="Items\ItemChest.cs" />
     <Compile Include="Items\ItemIronSword.cs" />
     <Compile Include="Items\ItemSign.cs" />
@@ -99,7 +99,7 @@
     <Compile Include="Blocks\WoodenDoor.cs" />
     <Compile Include="Explosion.cs" />
     <Compile Include="HealthManager.cs" />
-    <Compile Include="InventoryManager.cs" />
+    <Compile Include="PlayerInventory.cs" />
     <Compile Include="Items\Item.cs" />
     <Compile Include="Items\ItemBlock.cs" />
     <Compile Include="Items\ItemDoor.cs" />
