--- a/src/MiNET/MiNET.Service/App.config
+++ b/src/MiNET/MiNET.Service/App.config
@@ -13,7 +13,8 @@
 	<log4net>
 		<appender name="DebuggerAppender" type="log4net.Appender.DebugAppender">
 			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%newline%file (%line): %level: %message%newline"/>
+				<conversionPattern value="%5level [%.10class] - %message%newline"/>
+				<!--<conversionPattern value="%newline%file (%line): %level: %message%newline"/>-->
 			</layout>
 			<filter type="log4net.Filter.LevelRangeFilter">
 				<levelMin value="DEBUG" />
