Added items, removed hardcoded damage of 1.

--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -58,25 +58,38 @@
     <Compile Include="Blocks\AcaciaWoodStairs.cs" />
     <Compile Include="Blocks\BirchWoodStairs.cs" />
     <Compile Include="Blocks\BlockStairs.cs" />
+    <Compile Include="Blocks\BookShelf.cs" />
     <Compile Include="Blocks\BrickStairs.cs" />
+    <Compile Include="Blocks\CoalBlock.cs" />
+    <Compile Include="Blocks\Cobblestone.cs" />
     <Compile Include="Blocks\CobbleStoneStairs.cs" />
     <Compile Include="Blocks\CraftingTable.cs" />
     <Compile Include="Blocks\DarkOakWoodStairs.cs" />
+    <Compile Include="Blocks\Fence.cs" />
+    <Compile Include="Blocks\Fencegate.cs" />
     <Compile Include="Blocks\Fire.cs" />
     <Compile Include="Blocks\Furnace.cs" />
     <Compile Include="Blocks\Glass.cs" />
+    <Compile Include="Blocks\GoldOre.cs" />
+    <Compile Include="Blocks\IronOre.cs" />
     <Compile Include="Blocks\JungleWoodStairs.cs" />
     <Compile Include="Blocks\NetherBrickStairs.cs" />
     <Compile Include="Blocks\OakWoodStairs.cs" />
     <Compile Include="Blocks\QuartzStairs.cs" />
+    <Compile Include="Blocks\Sand.cs" />
     <Compile Include="Blocks\SandStoneStairs.cs" />
+    <Compile Include="Blocks\Sapling.cs" />
     <Compile Include="Blocks\SpruceWoodStairs.cs" />
     <Compile Include="Blocks\StandingSign.cs" />
+    <Compile Include="Blocks\StoneBrick.cs" />
     <Compile Include="Blocks\StoneBrickStairs.cs" />
     <Compile Include="Blocks\WallSign.cs" />
+    <Compile Include="Blocks\Wood.cs" />
+    <Compile Include="Blocks\WoodenPlanks.cs" />
     <Compile Include="CommandHandler\BoomCommand.cs" />
     <Compile Include="CommandHandler\CommandHandler.cs" />
     <Compile Include="CommandHandler\DeOpCommand.cs" />
+    <Compile Include="CommandHandler\GiveCommand.cs" />
     <Compile Include="CommandHandler\HelpCommand.cs" />
     <Compile Include="CommandHandler\ICommandHandler.cs" />
     <Compile Include="CommandHandler\OpCommand.cs" />
@@ -88,9 +101,19 @@
     <Compile Include="Inventory.cs" />
     <Compile Include="InventoryManager.cs" />
     <Compile Include="Items\ItemChest.cs" />
+    <Compile Include="Items\ItemCoal.cs" />
+    <Compile Include="Items\ItemDiamondSword.cs" />
     <Compile Include="Items\ItemFurnace.cs" />
     <Compile Include="Items\ItemIronSword.cs" />
     <Compile Include="Items\ItemSign.cs" />
+    <Compile Include="Items\ItemStick.cs" />
+    <Compile Include="Items\ItemWoodenAxe.cs" />
+    <Compile Include="Items\ItemWoodenPickaxe.cs" />
+    <Compile Include="Items\ItemWoodenShovel.cs" />
+    <Compile Include="Items\ItemWoodenSword.cs" />
+    <Compile Include="Items\RawBeef.cs" />
+    <Compile Include="Items\RawChicken.cs" />
+    <Compile Include="Items\RawPorkchop.cs" />
     <Compile Include="Net\InternalPing.cs" />
     <Compile Include="PermissionManager.cs" />
     <Compile Include="PluginSystem\AbstractPlugin.cs" />
