--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -193,6 +193,8 @@
     <Compile Include="Worlds\FlatlandWorldProvider.cs" />
     <Compile Include="Worlds\IWorldProvider.cs" />
     <Compile Include="Worlds\Level.cs" />
+    <Compile Include="Worlds\Structures\OakTree.cs" />
+    <Compile Include="Worlds\Structures\StructureClass.cs" />
     <Content Include="Net\MCPE Protocol.xml">
       <SubType>Designer</SubType>
     </Content>
