New Plugin API for MiNET. Please see gitter.im for discussion and examples. The TestPlugin project contain examples of plugins and how to use it.

--- a/src/MiNET/MiNET.Service/App.config
+++ b/src/MiNET/MiNET.Service/App.config
@@ -18,7 +18,7 @@
 			</layout>
 			<filter type="log4net.Filter.LevelRangeFilter">
 				<levelMin value="DEBUG" />
-				<levelMax value="DEBUG" />
+				<levelMax value="FATAL" />
 			</filter>
 		</appender>
 
