--- a/src/MiNET/packages/repositories.config
+++ b/src/MiNET/packages/repositories.config
@@ -4,4 +4,5 @@
   <repository path="..\MiNET.Service\packages.config" />
   <repository path="..\MiNET.Test\packages.config" />
   <repository path="..\MiNET\packages.config" />
+  <repository path="..\TestPlugin\packages.config" />
 </repositories>
