--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -96,7 +96,7 @@
     <Compile Include="Blocks\Wood.cs" />
     <Compile Include="Blocks\WoodenPlanks.cs" />
     <Compile Include="CommandHandler\BoomCommand.cs" />
-    <Compile Include="CommandHandler\CommandHandler.cs" />
+    <Compile Include="CommandHandler\CommandManager.cs" />
     <Compile Include="CommandHandler\DeOpCommand.cs" />
     <Compile Include="CommandHandler\GiveCommand.cs" />
     <Compile Include="CommandHandler\HelpCommand.cs" />
@@ -127,12 +127,11 @@
     <Compile Include="Net\InternalPing.cs" />
     <Compile Include="PermissionManager.cs" />
     <Compile Include="PlayerNetworkSession.cs" />
-    <Compile Include="PluginSystem\AbstractPlugin.cs" />
-    <Compile Include="PluginSystem\Attributes\CommandAttribute.cs" />
-    <Compile Include="PluginSystem\Attributes\HandlePacketAttribute.cs" />
-    <Compile Include="PluginSystem\Attributes\HandleSendPacketAttribute.cs" />
-    <Compile Include="PluginSystem\Attributes\PluginAttribute.cs" />
-    <Compile Include="PluginSystem\IMiNETPlugin.cs" />
+    <Compile Include="Plugins\AbstractPlugin.cs" />
+    <Compile Include="Plugins\Attributes\CommandAttribute.cs" />
+    <Compile Include="Plugins\Attributes\PacketHandlerAttribute.cs" />
+    <Compile Include="Plugins\Attributes\PluginAttribute.cs" />
+    <Compile Include="Plugins\IPlugin.cs" />
     <Compile Include="Blocks\Block.cs" />
     <Compile Include="Blocks\Air.cs" />
     <Compile Include="Blocks\Bedrock.cs" />
@@ -169,7 +168,7 @@
     <Compile Include="Net\UnknownPackage.cs" />
     <Compile Include="MiNetServer.cs" />
     <Compile Include="Player.cs" />
-    <Compile Include="PluginSystem\PluginLoader.cs" />
+    <Compile Include="Plugins\PluginManager.cs" />
     <Compile Include="Utils\BoundingBox.cs" />
     <Compile Include="Utils\ChunkCoordinates.cs" />
     <Compile Include="Utils\OpenSimplex.cs" />
@@ -254,9 +253,7 @@
       <Name>Craft.Net.TerrainGeneration</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="API\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
