--- a/src/MiNET/MiNET.Service/App.config
+++ b/src/MiNET/MiNET.Service/App.config
@@ -6,9 +6,20 @@
 		  type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
 		<!-- Level 2 -->
 	</configSections>
+
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
 	</startup>
+
+	<runtime>
+		<assemblyBinding>
+			<!--<probing aprivatePath="bin;bin2\subbin;bin3"/>-->
+		</assemblyBinding>
+	</runtime>
+
+	<appSettings>
+		<!--<add key="minet:serverStartup" value="StartupDemo.ProductionStartup" />-->
+	</appSettings>
 
 	<log4net>
 		<appender name="DebuggerAppender" type="log4net.Appender.DebugAppender">
