--- a/src/MiNET/MiNET/packages.config
+++ b/src/MiNET/MiNET/packages.config
@@ -3,4 +3,5 @@
   <package id="Deedle" version="1.0.7" targetFramework="net45" />
   <package id="LibNoise" version="0.2" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.0" targetFramework="net45" />
 </packages>
